# okard-backend

./: .dockerignore  .env.example  .env.local  .gitignore  .trivyignore  Dockerfile  alembic.ini  docker-compose.local.yml  docker-compose.yml  pyproject.toml
.agent/workflows/: alembic_usage.md
.github/workflows/: deploy-prd.yaml  deploy-uat.yml  pr-check-prd.yaml  pr-check-uat.yml
alembic/: README  country.csv  env.py
alembic/versions/: 057acac65000_init_schema.py  0f610d72ba04_rename_post_header_description_to_campaign.py  1118366a2464_seed_country_data.py  1151ec6e56b1_move_embedding_to_new_table.py  12cb81e09666_merge_head.py  1a554cd248a0_fix_campaign_enum_types.py  2065c6e6953b_add_timezone_for_comment_and_creator_.py  24177bdb8b7b_remove_category_label_from_model.py  245a8575dda9_merge_heads.py  25488cf16d55_merge_heads.py  28e0a0d32bf0_refactor_post_state.py  29d560e369e4_merge_heads.py  2a953ee13f96_update_schema_all.py  304dbe1fd5f7_merge_heads.py  38c04c49b0e5_add_minio_to_storage_provider.py  3b796b60e733_merge_heads.py  46983538594f_fix_enum_category.py  4cfac35350f2_add_report_to_referencetype_and_files_.py  524a55ee7744_merge_heads.py  5b84e7e725f1_add_proposed_changes_jsonb.py  5fc35b065330_rename_information_columns.py  61f9be0df03b_change_pk_on_user_campaign_view.py  784b842f2dd7_create_creator_verification_doc.py  7953ffddddc7_rename_post_to_campaign_and_campaign_to_.py  81851fd0c910_init_schema.py  8506615139eb_add_edit_request_to_referencetype.py  (+20 more)
argocd/: prd.yaml  uat.yaml
k3s/: README.md
src/: main.py
tests/: test_creator_verification.py  test_schema_verification.py
(+219 files in other folders)
