[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.2",
    "clerk-backend-api>=3.3.1",
    "email-validator>=2.3.0",
    "fastapi>=0.116.1",
    "joblib>=1.5.2",
    "openai>=1.97.1",
    "pandas>=2.3.3",
    "psycopg2>=2.9.11",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "sentence-transformers>=5.1.1",
    "sqlalchemy>=2.0.41",
    "tabm>=0.0.3",
    "torch>=2.8.0",
    "uvicorn>=0.35.0",
    "python-jose[cryptography]>=3.3.0",
    "requests>=2.31.0",
    "python-multipart>=0.0.9",
    "boto3>=1.42.64",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
